Add todo, edit and delete with views

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.7'
 
 services:
-  rest:
-    container_name: rest
-    build:
-      context: ./rest_api
-      dockerfile: Dockerfile
-    volumes:
-      - './rest_api/:/app'
-    ports:
-      - 5000:5000
+  #rest:
+  #  container_name: rest
+  #  build:
+  #    context: ./rest_api
+  #    dockerfile: Dockerfile
+  #  volumes:
+  #    - './rest_api/:/app'
+  #  ports:
+  #    - 5000:5000
   db:
     image: postgres:alpine
     hostname: postgres_db
