--- a/rest_api/.env
+++ b/rest_api/.env
@@ -1,7 +1,8 @@
-RUST_LOG=rest_api=info,actix=info
+RUST_LOG=info
+RUST_BACKTRACE=0
 HOST=0.0.0.0
 PORT=5000
 
-HOST_DB=db
+HOST_DB=localhost
 USER_DB=rust
 PASS_DB=rust2021
