--- a/rest_api/Dockerfile
+++ b/rest_api/Dockerfile
@@ -2,7 +2,7 @@ FROM rust:1.53-slim
 
 WORKDIR app
 COPY . .
-RUN cargo install systemfd cargo-watch
+RUN cargo install cargo-watch
 RUN cargo build
 
 CMD ["./start.sh"]
